--- a/beepBeepUser/amplify/.config/project-config.json
+++ b/beepBeepUser/amplify/.config/project-config.json
@@ -2,7 +2,7 @@
   "providers": [
     "awscloudformation"
   ],
-  "projectName": "BeepBeep",
+  "projectName": "BeepBeepUser",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
