--- a/beepBeepUser/amplify/backend/backend-config.json
+++ b/beepBeepUser/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "BeepBeep": {
+    "BeepBeepUser": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
